[package]
name = "starknet-validator-attestation"
version = "0.5.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.4"
clap = { version = "4.5.48", features = ["derive", "env"] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rustls = "0.23.32"
semver = "1.0.27"
serde = "1.0.226"
serde_json = "1.0.145"
starknet = "0.17.0"
starknet-crypto = "0.8.1"
starknet-tokio-tungstenite = "0.3.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
url = "2.5.7"

[dev-dependencies]
assert_matches = "1.5.0"
