[package]
name = "starknet-validator-attestation"
version = "0.5.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.6"
clap = { version = "4.5.51", features = ["derive", "env"] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rustls = "0.23.35"
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1.0.145"
starknet = "0.17.0"
starknet-crypto = "0.8.1"
starknet-tokio-tungstenite = "0.3.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
url = "2.5.7"

[dev-dependencies]
assert_matches = "1.5.0"
