[package]
name = "starknet-validator-attestation"
version = "0.5.2"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
clap = { version = "4.6.0", features = ["derive", "env"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.17.2"
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rustls = "0.23.37"
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1.0.149"
starknet-rust = "0.18.0"
starknet-rust-crypto = "0.9.0"
starknet-rust-tokio-tungstenite = "0.4.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
url = "2.5.8"

[dev-dependencies]
assert_matches = "1.5.0"
